--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,25 @@
 h1 {
     
-  color: fuchsia;
+  color: yellow
+}
+p{
+    color:white;
+}
+#subtitle{
+    color:pink;
+}
+#sideOne{
+    float:left;
+    
+}
+#sideTwo{
+    float:right;
+    
+}
+body {
+    background-color: black;
+}
+#moviePoster{
+    height:50px;
+    width:50px;
 }
